# trajectory_plan

./: CMakeLists.txt  package.xml
action/: PickAndPlace.action
config/: pick_place_poses.yaml
include/trajectory_plan/: robot_operation.hpp  table_config.hpp  trajectory_planner.hpp  trajectory_planner.txt  workspace_config.hpp
launch/: complete_pick_place.launch.py  pick_and_place.launch.py  robot_state_monitor.py
src/: pick_and_place_node.cpp  robot_operation.cpp  robot_state_monitor.cpp  table_config.cpp  trajectory_planner.cpp  workspace_config.cpp
